genz_parser.output
Terminals unused in grammar

   KEYWORD_ERA
   KEYWORD_SQUAD
   KEYWORD_GHOST
   KEYWORD_SKIP
   KEYWORD_SLIDEIN
   KEYWORD_CLOUT
   KEYWORD_LEVELUP
   KEYWORD_TEST
   KEYWORD_CAUGHT_IN_4K
   KEYWORD_SLAYY
   KEYWORD_LOWKEY
   KEYWORD_HIGHKEY
   KEYWORD_OG
   KEYWORD_SUS
   KEYWORD_MAIN_CHARACTER
   KEYWORD_MAINCHARACTER
   KEYWORD_BUSSIN
   KEYWORD_MID
   KEYWORD_ATE
   KEYWORD_RIZZ
   TYPE_LISTY
   TYPE_MAPPY
   OPERATOR_INCR
   OPERATOR_DECR
   OPERATOR_ADD_ASSIGN
   OPERATOR_SUB_ASSIGN
   OPERATOR_MUL_ASSIGN
   OPERATOR_DIV_ASSIGN
   OPERATOR_MOD_ASSIGN
   SYMBOL_SPREAD
   SYMBOL_ARROW
   SYMBOL_FOR_SEP
   SYMBOL_DOT
   SYMBOL_COMMA
   SYMBOL_COLON
   SYMBOL_LPAREN
   SYMBOL_RPAREN
   SYMBOL_LBRACE
   SYMBOL_RBRACE
   SYMBOL_LBRACKET
   SYMBOL_RBRACKET


State 9 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: statement_list

    2 statement_list: /* empty */
    3               | statement_list statement

    4 statement: var_decl optional_semi
    5          | assignment optional_semi
    6          | print_stmt optional_semi
    7          | input_stmt optional_semi
    8          | return_stmt optional_semi
    9          | if_stmt
   10          | while_stmt
   11          | loopin_stmt
   12          | block

   13 optional_semi: /* empty */
   14              | ';'
   15              | SYMBOL_SEMI

   16 block: '{' statement_list '}'

   17 var_decl: decl_kw IDENTIFIER
   18         | decl_kw IDENTIFIER '=' expr
   19         | decl_kw IDENTIFIER OPERATOR_ASSIGN expr

   20 decl_kw: KEYWORD_BET
   21        | KEYWORD_FR
   22        | TYPE_INTY
   23        | TYPE_STRINGY
   24        | TYPE_BOOLY
   25        | TYPE_FLOATY

   26 assignment: IDENTIFIER '=' expr
   27           | IDENTIFIER OPERATOR_ASSIGN expr

   28 if_stmt: KEYWORD_VIBECHECK '(' expr ')' block if_tail

   29 if_tail: /* empty */
   30        | KEYWORD_AINT '(' expr ')' block if_tail
   31        | KEYWORD_MEH block

   32 while_stmt: KEYWORD_VIBE '(' expr ')' block

   33 loopin_stmt: KEYWORD_LOOPIN for_init '#' expr '#' for_update block

   34 for_init: /* empty */
   35         | var_decl
   36         | assignment

   37 for_update: /* empty */
   38           | assignment
   39           | KEYWORD_GLOWUP IDENTIFIER
   40           | KEYWORD_FALLOFF IDENTIFIER

   41 print_stmt: KEYWORD_SPILL_TEA '(' expr ')'

   42 input_stmt: KEYWORD_CHECKIT '(' IDENTIFIER ')'

   43 return_stmt: KEYWORD_YEET
   44            | KEYWORD_YEET expr

   45 expr: expr OPERATOR_OR expr
   46     | expr OPERATOR_AND expr
   47     | expr OPERATOR_EQ expr
   48     | expr OPERATOR_NEQ expr
   49     | expr OPERATOR_LT expr
   50     | expr OPERATOR_LTE expr
   51     | expr OPERATOR_GT expr
   52     | expr OPERATOR_GTE expr
   53     | expr OPERATOR_PLUS expr
   54     | expr OPERATOR_MINUS expr
   55     | expr OPERATOR_MUL expr
   56     | expr OPERATOR_DIV expr
   57     | expr OPERATOR_MOD expr
   58     | expr KEYWORD_RATIO expr
   59     | OPERATOR_NOT expr
   60     | '(' expr ')'
   61     | literal
   62     | IDENTIFIER

   63 literal: INT_LITERAL
   64        | FLOAT_LITERAL
   65        | STRING_CONTENT
   66        | HEX_LITERAL
   67        | BIN_LITERAL
   68        | CHAR_LITERAL
   69        | CHAR_ESCAPE
   70        | KEYWORD_NOCAP
   71        | KEYWORD_CAP
   72        | VAL_TRUE
   73        | VAL_FALSE
   74        | KEYWORD_NPC


Terminals, with rules where they appear

$end (0) 0
'#' (35) 33
'(' (40) 28 30 32 41 42 60
')' (41) 28 30 32 41 42 60
';' (59) 14
'=' (61) 18 26
'{' (123) 16
'}' (125) 16
error (256)
INT_LITERAL (258) 63
FLOAT_LITERAL (259) 64
IDENTIFIER (260) 17 18 19 26 27 39 40 42 62
STRING_CONTENT (261) 65
HEX_LITERAL (262) 66
BIN_LITERAL (263) 67
CHAR_LITERAL (264) 68
CHAR_ESCAPE (265) 69
KEYWORD_BET (266) 20
KEYWORD_FR (267) 21
KEYWORD_ERA (268)
KEYWORD_VIBECHECK (269) 28
KEYWORD_AINT (270) 30
KEYWORD_MEH (271) 31
KEYWORD_LOOPIN (272) 33
KEYWORD_YEET (273) 43 44
KEYWORD_SPILL_TEA (274) 41
KEYWORD_NOCAP (275) 70
KEYWORD_CAP (276) 71
KEYWORD_SQUAD (277)
KEYWORD_GHOST (278)
KEYWORD_SKIP (279)
KEYWORD_SLIDEIN (280)
KEYWORD_CLOUT (281)
KEYWORD_LEVELUP (282)
KEYWORD_NPC (283) 74
KEYWORD_TEST (284)
KEYWORD_CAUGHT_IN_4K (285)
KEYWORD_SLAYY (286)
KEYWORD_LOWKEY (287)
KEYWORD_HIGHKEY (288)
KEYWORD_OG (289)
KEYWORD_CHECKIT (290) 42
KEYWORD_SUS (291)
KEYWORD_MAIN_CHARACTER (292)
KEYWORD_MAINCHARACTER (293)
KEYWORD_GLOWUP (294) 39
KEYWORD_FALLOFF (295) 40
KEYWORD_RATIO (296) 58
KEYWORD_VIBE (297) 32
KEYWORD_BUSSIN (298)
KEYWORD_MID (299)
KEYWORD_ATE (300)
KEYWORD_RIZZ (301)
TYPE_INTY (302) 22
TYPE_STRINGY (303) 23
TYPE_BOOLY (304) 24
TYPE_FLOATY (305) 25
TYPE_LISTY (306)
TYPE_MAPPY (307)
VAL_TRUE (308) 72
VAL_FALSE (309) 73
OPERATOR_EQ (310) 47
OPERATOR_NEQ (311) 48
OPERATOR_LTE (312) 50
OPERATOR_GTE (313) 52
OPERATOR_AND (314) 46
OPERATOR_OR (315) 45
OPERATOR_NOT (316) 59
OPERATOR_INCR (317)
OPERATOR_DECR (318)
OPERATOR_ADD_ASSIGN (319)
OPERATOR_SUB_ASSIGN (320)
OPERATOR_MUL_ASSIGN (321)
OPERATOR_DIV_ASSIGN (322)
OPERATOR_MOD_ASSIGN (323)
OPERATOR_PLUS (324) 53
OPERATOR_MINUS (325) 54
OPERATOR_MUL (326) 55
OPERATOR_DIV (327) 56
OPERATOR_MOD (328) 57
OPERATOR_ASSIGN (329) 19 27
OPERATOR_LT (330) 49
OPERATOR_GT (331) 51
SYMBOL_SPREAD (332)
SYMBOL_ARROW (333)
SYMBOL_FOR_SEP (334)
SYMBOL_DOT (335)
SYMBOL_COMMA (336)
SYMBOL_COLON (337)
SYMBOL_SEMI (338) 15
SYMBOL_LPAREN (339)
SYMBOL_RPAREN (340)
SYMBOL_LBRACE (341)
SYMBOL_RBRACE (342)
SYMBOL_LBRACKET (343)
SYMBOL_RBRACKET (344)
LOWER_THAN_SEMI (345)


Nonterminals, with rules where they appear

$accept (98)
    on left: 0
program (99)
    on left: 1, on right: 0
statement_list (100)
    on left: 2 3, on right: 1 3 16
statement (101)
    on left: 4 5 6 7 8 9 10 11 12, on right: 3
optional_semi (102)
    on left: 13 14 15, on right: 4 5 6 7 8
block (103)
    on left: 16, on right: 12 28 30 31 32 33
var_decl (104)
    on left: 17 18 19, on right: 4 35
decl_kw (105)
    on left: 20 21 22 23 24 25, on right: 17 18 19
assignment (106)
    on left: 26 27, on right: 5 36 38
if_stmt (107)
    on left: 28, on right: 9
if_tail (108)
    on left: 29 30 31, on right: 28 30
while_stmt (109)
    on left: 32, on right: 10
loopin_stmt (110)
    on left: 33, on right: 11
for_init (111)
    on left: 34 35 36, on right: 33
for_update (112)
    on left: 37 38 39 40, on right: 33
print_stmt (113)
    on left: 41, on right: 6
input_stmt (114)
    on left: 42, on right: 7
return_stmt (115)
    on left: 43 44, on right: 8
expr (116)
    on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62,
    on right: 18 19 26 27 28 30 32 33 41 44 45 46 47 48 49 50 51 52
    53 54 55 56 57 58 59 60
literal (117)
    on left: 63 64 65 66 67 68 69 70 71 72 73 74, on right: 61


state 0

    0 $accept: . program $end

    $default  reduce using rule 2 (statement_list)

    program         go to state 1
    statement_list  go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: statement_list .
    3 statement_list: statement_list . statement

    IDENTIFIER         shift, and go to state 4
    KEYWORD_BET        shift, and go to state 5
    KEYWORD_FR         shift, and go to state 6
    KEYWORD_VIBECHECK  shift, and go to state 7
    KEYWORD_LOOPIN     shift, and go to state 8
    KEYWORD_YEET       shift, and go to state 9
    KEYWORD_SPILL_TEA  shift, and go to state 10
    KEYWORD_CHECKIT    shift, and go to state 11
    KEYWORD_VIBE       shift, and go to state 12
    TYPE_INTY          shift, and go to state 13
    TYPE_STRINGY       shift, and go to state 14
    TYPE_BOOLY         shift, and go to state 15
    TYPE_FLOATY        shift, and go to state 16
    '{'                shift, and go to state 17

    $default  reduce using rule 1 (program)

    statement    go to state 18
    block        go to state 19
    var_decl     go to state 20
    decl_kw      go to state 21
    assignment   go to state 22
    if_stmt      go to state 23
    while_stmt   go to state 24
    loopin_stmt  go to state 25
    print_stmt   go to state 26
    input_stmt   go to state 27
    return_stmt  go to state 28


state 3

    0 $accept: program $end .

    $default  accept


state 4

   26 assignment: IDENTIFIER . '=' expr
   27           | IDENTIFIER . OPERATOR_ASSIGN expr

    OPERATOR_ASSIGN  shift, and go to state 29
    '='              shift, and go to state 30


state 5

   20 decl_kw: KEYWORD_BET .

    $default  reduce using rule 20 (decl_kw)


state 6

   21 decl_kw: KEYWORD_FR .

    $default  reduce using rule 21 (decl_kw)


state 7

   28 if_stmt: KEYWORD_VIBECHECK . '(' expr ')' block if_tail

    '('  shift, and go to state 31


state 8

   33 loopin_stmt: KEYWORD_LOOPIN . for_init '#' expr '#' for_update block

    IDENTIFIER    shift, and go to state 4
    KEYWORD_BET   shift, and go to state 5
    KEYWORD_FR    shift, and go to state 6
    TYPE_INTY     shift, and go to state 13
    TYPE_STRINGY  shift, and go to state 14
    TYPE_BOOLY    shift, and go to state 15
    TYPE_FLOATY   shift, and go to state 16

    $default  reduce using rule 34 (for_init)

    var_decl    go to state 32
    decl_kw     go to state 21
    assignment  go to state 33
    for_init    go to state 34


state 9

   43 return_stmt: KEYWORD_YEET .
   44            | KEYWORD_YEET . expr

    INT_LITERAL     shift, and go to state 35
    FLOAT_LITERAL   shift, and go to state 36
    IDENTIFIER      shift, and go to state 37
    STRING_CONTENT  shift, and go to state 38
    HEX_LITERAL     shift, and go to state 39
    BIN_LITERAL     shift, and go to state 40
    CHAR_LITERAL    shift, and go to state 41
    CHAR_ESCAPE     shift, and go to state 42
    KEYWORD_NOCAP   shift, and go to state 43
    KEYWORD_CAP     shift, and go to state 44
    KEYWORD_NPC     shift, and go to state 45
    VAL_TRUE        shift, and go to state 46
    VAL_FALSE       shift, and go to state 47
    OPERATOR_NOT    shift, and go to state 48
    '('             shift, and go to state 49

    IDENTIFIER  [reduce using rule 43 (return_stmt)]
    $default    reduce using rule 43 (return_stmt)

    expr     go to state 50
    literal  go to state 51


state 10

   41 print_stmt: KEYWORD_SPILL_TEA . '(' expr ')'

    '('  shift, and go to state 52


state 11

   42 input_stmt: KEYWORD_CHECKIT . '(' IDENTIFIER ')'

    '('  shift, and go to state 53


state 12

   32 while_stmt: KEYWORD_VIBE . '(' expr ')' block

    '('  shift, and go to state 54


state 13

   22 decl_kw: TYPE_INTY .

    $default  reduce using rule 22 (decl_kw)


state 14

   23 decl_kw: TYPE_STRINGY .

    $default  reduce using rule 23 (decl_kw)


state 15

   24 decl_kw: TYPE_BOOLY .

    $default  reduce using rule 24 (decl_kw)


state 16

   25 decl_kw: TYPE_FLOATY .

    $default  reduce using rule 25 (decl_kw)


state 17

   16 block: '{' . statement_list '}'

    $default  reduce using rule 2 (statement_list)

    statement_list  go to state 55


state 18

    3 statement_list: statement_list statement .

    $default  reduce using rule 3 (statement_list)


state 19

   12 statement: block .

    $default  reduce using rule 12 (statement)


state 20

    4 statement: var_decl . optional_semi

    SYMBOL_SEMI  shift, and go to state 56
    ';'          shift, and go to state 57

    $default  reduce using rule 13 (optional_semi)

    optional_semi  go to state 58


state 21

   17 var_decl: decl_kw . IDENTIFIER
   18         | decl_kw . IDENTIFIER '=' expr
   19         | decl_kw . IDENTIFIER OPERATOR_ASSIGN expr

    IDENTIFIER  shift, and go to state 59


state 22

    5 statement: assignment . optional_semi

    SYMBOL_SEMI  shift, and go to state 56
    ';'          shift, and go to state 57

    $default  reduce using rule 13 (optional_semi)

    optional_semi  go to state 60


state 23

    9 statement: if_stmt .

    $default  reduce using rule 9 (statement)


state 24

   10 statement: while_stmt .

    $default  reduce using rule 10 (statement)


state 25

   11 statement: loopin_stmt .

    $default  reduce using rule 11 (statement)


state 26

    6 statement: print_stmt . optional_semi

    SYMBOL_SEMI  shift, and go to state 56
    ';'          shift, and go to state 57

    $default  reduce using rule 13 (optional_semi)

    optional_semi  go to state 61


state 27

    7 statement: input_stmt . optional_semi

    SYMBOL_SEMI  shift, and go to state 56
    ';'          shift, and go to state 57

    $default  reduce using rule 13 (optional_semi)

    optional_semi  go to state 62


state 28

    8 statement: return_stmt . optional_semi

    SYMBOL_SEMI  shift, and go to state 56
    ';'          shift, and go to state 57

    $default  reduce using rule 13 (optional_semi)

    optional_semi  go to state 63


state 29

   27 assignment: IDENTIFIER OPERATOR_ASSIGN . expr

    INT_LITERAL     shift, and go to state 35
    FLOAT_LITERAL   shift, and go to state 36
    IDENTIFIER      shift, and go to state 37
    STRING_CONTENT  shift, and go to state 38
    HEX_LITERAL     shift, and go to state 39
    BIN_LITERAL     shift, and go to state 40
    CHAR_LITERAL    shift, and go to state 41
    CHAR_ESCAPE     shift, and go to state 42
    KEYWORD_NOCAP   shift, and go to state 43
    KEYWORD_CAP     shift, and go to state 44
    KEYWORD_NPC     shift, and go to state 45
    VAL_TRUE        shift, and go to state 46
    VAL_FALSE       shift, and go to state 47
    OPERATOR_NOT    shift, and go to state 48
    '('             shift, and go to state 49

    expr     go to state 64
    literal  go to state 51


state 30

   26 assignment: IDENTIFIER '=' . expr

    INT_LITERAL     shift, and go to state 35
    FLOAT_LITERAL   shift, and go to state 36
    IDENTIFIER      shift, and go to state 37
    STRING_CONTENT  shift, and go to state 38
    HEX_LITERAL     shift, and go to state 39
    BIN_LITERAL     shift, and go to state 40
    CHAR_LITERAL    shift, and go to state 41
    CHAR_ESCAPE     shift, and go to state 42
    KEYWORD_NOCAP   shift, and go to state 43
    KEYWORD_CAP     shift, and go to state 44
    KEYWORD_NPC     shift, and go to state 45
    VAL_TRUE        shift, and go to state 46
    VAL_FALSE       shift, and go to state 47
    OPERATOR_NOT    shift, and go to state 48
    '('             shift, and go to state 49

    expr     go to state 65
    literal  go to state 51


state 31

   28 if_stmt: KEYWORD_VIBECHECK '(' . expr ')' block if_tail

    INT_LITERAL     shift, and go to state 35
    FLOAT_LITERAL   shift, and go to state 36
    IDENTIFIER      shift, and go to state 37
    STRING_CONTENT  shift, and go to state 38
    HEX_LITERAL     shift, and go to state 39
    BIN_LITERAL     shift, and go to state 40
    CHAR_LITERAL    shift, and go to state 41
    CHAR_ESCAPE     shift, and go to state 42
    KEYWORD_NOCAP   shift, and go to state 43
    KEYWORD_CAP     shift, and go to state 44
    KEYWORD_NPC     shift, and go to state 45
    VAL_TRUE        shift, and go to state 46
    VAL_FALSE       shift, and go to state 47
    OPERATOR_NOT    shift, and go to state 48
    '('             shift, and go to state 49

    expr     go to state 66
    literal  go to state 51


state 32

   35 for_init: var_decl .

    $default  reduce using rule 35 (for_init)


state 33

   36 for_init: assignment .

    $default  reduce using rule 36 (for_init)


state 34

   33 loopin_stmt: KEYWORD_LOOPIN for_init . '#' expr '#' for_update block

    '#'  shift, and go to state 67


state 35

   63 literal: INT_LITERAL .

    $default  reduce using rule 63 (literal)


state 36

   64 literal: FLOAT_LITERAL .

    $default  reduce using rule 64 (literal)


state 37

   62 expr: IDENTIFIER .

    $default  reduce using rule 62 (expr)


state 38

   65 literal: STRING_CONTENT .

    $default  reduce using rule 65 (literal)


state 39

   66 literal: HEX_LITERAL .

    $default  reduce using rule 66 (literal)


state 40

   67 literal: BIN_LITERAL .

    $default  reduce using rule 67 (literal)


state 41

   68 literal: CHAR_LITERAL .

    $default  reduce using rule 68 (literal)


state 42

   69 literal: CHAR_ESCAPE .

    $default  reduce using rule 69 (literal)


state 43

   70 literal: KEYWORD_NOCAP .

    $default  reduce using rule 70 (literal)


state 44

   71 literal: KEYWORD_CAP .

    $default  reduce using rule 71 (literal)


state 45

   74 literal: KEYWORD_NPC .

    $default  reduce using rule 74 (literal)


state 46

   72 literal: VAL_TRUE .

    $default  reduce using rule 72 (literal)


state 47

   73 literal: VAL_FALSE .

    $default  reduce using rule 73 (literal)


state 48

   59 expr: OPERATOR_NOT . expr

    INT_LITERAL     shift, and go to state 35
    FLOAT_LITERAL   shift, and go to state 36
    IDENTIFIER      shift, and go to state 37
    STRING_CONTENT  shift, and go to state 38
    HEX_LITERAL     shift, and go to state 39
    BIN_LITERAL     shift, and go to state 40
    CHAR_LITERAL    shift, and go to state 41
    CHAR_ESCAPE     shift, and go to state 42
    KEYWORD_NOCAP   shift, and go to state 43
    KEYWORD_CAP     shift, and go to state 44
    KEYWORD_NPC     shift, and go to state 45
    VAL_TRUE        shift, and go to state 46
    VAL_FALSE       shift, and go to state 47
    OPERATOR_NOT    shift, and go to state 48
    '('             shift, and go to state 49

    expr     go to state 68
    literal  go to state 51


state 49

   60 expr: '(' . expr ')'

    INT_LITERAL     shift, and go to state 35
    FLOAT_LITERAL   shift, and go to state 36
    IDENTIFIER      shift, and go to state 37
    STRING_CONTENT  shift, and go to state 38
    HEX_LITERAL     shift, and go to state 39
    BIN_LITERAL     shift, and go to state 40
    CHAR_LITERAL    shift, and go to state 41
    CHAR_ESCAPE     shift, and go to state 42
    KEYWORD_NOCAP   shift, and go to state 43
    KEYWORD_CAP     shift, and go to state 44
    KEYWORD_NPC     shift, and go to state 45
    VAL_TRUE        shift, and go to state 46
    VAL_FALSE       shift, and go to state 47
    OPERATOR_NOT    shift, and go to state 48
    '('             shift, and go to state 49

    expr     go to state 69
    literal  go to state 51


state 50

   44 return_stmt: KEYWORD_YEET expr .
   45 expr: expr . OPERATOR_OR expr
   46     | expr . OPERATOR_AND expr
   47     | expr . OPERATOR_EQ expr
   48     | expr . OPERATOR_NEQ expr
   49     | expr . OPERATOR_LT expr
   50     | expr . OPERATOR_LTE expr
   51     | expr . OPERATOR_GT expr
   52     | expr . OPERATOR_GTE expr
   53     | expr . OPERATOR_PLUS expr
   54     | expr . OPERATOR_MINUS expr
   55     | expr . OPERATOR_MUL expr
   56     | expr . OPERATOR_DIV expr
   57     | expr . OPERATOR_MOD expr
   58     | expr . KEYWORD_RATIO expr

    KEYWORD_RATIO   shift, and go to state 70
    OPERATOR_EQ     shift, and go to state 71
    OPERATOR_NEQ    shift, and go to state 72
    OPERATOR_LTE    shift, and go to state 73
    OPERATOR_GTE    shift, and go to state 74
    OPERATOR_AND    shift, and go to state 75
    OPERATOR_OR     shift, and go to state 76
    OPERATOR_PLUS   shift, and go to state 77
    OPERATOR_MINUS  shift, and go to state 78
    OPERATOR_MUL    shift, and go to state 79
    OPERATOR_DIV    shift, and go to state 80
    OPERATOR_MOD    shift, and go to state 81
    OPERATOR_LT     shift, and go to state 82
    OPERATOR_GT     shift, and go to state 83

    $default  reduce using rule 44 (return_stmt)


state 51

   61 expr: literal .

    $default  reduce using rule 61 (expr)


state 52

   41 print_stmt: KEYWORD_SPILL_TEA '(' . expr ')'

    INT_LITERAL     shift, and go to state 35
    FLOAT_LITERAL   shift, and go to state 36
    IDENTIFIER      shift, and go to state 37
    STRING_CONTENT  shift, and go to state 38
    HEX_LITERAL     shift, and go to state 39
    BIN_LITERAL     shift, and go to state 40
    CHAR_LITERAL    shift, and go to state 41
    CHAR_ESCAPE     shift, and go to state 42
    KEYWORD_NOCAP   shift, and go to state 43
    KEYWORD_CAP     shift, and go to state 44
    KEYWORD_NPC     shift, and go to state 45
    VAL_TRUE        shift, and go to state 46
    VAL_FALSE       shift, and go to state 47
    OPERATOR_NOT    shift, and go to state 48
    '('             shift, and go to state 49

    expr     go to state 84
    literal  go to state 51


state 53

   42 input_stmt: KEYWORD_CHECKIT '(' . IDENTIFIER ')'

    IDENTIFIER  shift, and go to state 85


state 54

   32 while_stmt: KEYWORD_VIBE '(' . expr ')' block

    INT_LITERAL     shift, and go to state 35
    FLOAT_LITERAL   shift, and go to state 36
    IDENTIFIER      shift, and go to state 37
    STRING_CONTENT  shift, and go to state 38
    HEX_LITERAL     shift, and go to state 39
    BIN_LITERAL     shift, and go to state 40
    CHAR_LITERAL    shift, and go to state 41
    CHAR_ESCAPE     shift, and go to state 42
    KEYWORD_NOCAP   shift, and go to state 43
    KEYWORD_CAP     shift, and go to state 44
    KEYWORD_NPC     shift, and go to state 45
    VAL_TRUE        shift, and go to state 46
    VAL_FALSE       shift, and go to state 47
    OPERATOR_NOT    shift, and go to state 48
    '('             shift, and go to state 49

    expr     go to state 86
    literal  go to state 51


state 55

    3 statement_list: statement_list . statement
   16 block: '{' statement_list . '}'

    IDENTIFIER         shift, and go to state 4
    KEYWORD_BET        shift, and go to state 5
    KEYWORD_FR         shift, and go to state 6
    KEYWORD_VIBECHECK  shift, and go to state 7
    KEYWORD_LOOPIN     shift, and go to state 8
    KEYWORD_YEET       shift, and go to state 9
    KEYWORD_SPILL_TEA  shift, and go to state 10
    KEYWORD_CHECKIT    shift, and go to state 11
    KEYWORD_VIBE       shift, and go to state 12
    TYPE_INTY          shift, and go to state 13
    TYPE_STRINGY       shift, and go to state 14
    TYPE_BOOLY         shift, and go to state 15
    TYPE_FLOATY        shift, and go to state 16
    '{'                shift, and go to state 17
    '}'                shift, and go to state 87

    statement    go to state 18
    block        go to state 19
    var_decl     go to state 20
    decl_kw      go to state 21
    assignment   go to state 22
    if_stmt      go to state 23
    while_stmt   go to state 24
    loopin_stmt  go to state 25
    print_stmt   go to state 26
    input_stmt   go to state 27
    return_stmt  go to state 28


state 56

   15 optional_semi: SYMBOL_SEMI .

    $default  reduce using rule 15 (optional_semi)


state 57

   14 optional_semi: ';' .

    $default  reduce using rule 14 (optional_semi)


state 58

    4 statement: var_decl optional_semi .

    $default  reduce using rule 4 (statement)


state 59

   17 var_decl: decl_kw IDENTIFIER .
   18         | decl_kw IDENTIFIER . '=' expr
   19         | decl_kw IDENTIFIER . OPERATOR_ASSIGN expr

    OPERATOR_ASSIGN  shift, and go to state 88
    '='              shift, and go to state 89

    $default  reduce using rule 17 (var_decl)


state 60

    5 statement: assignment optional_semi .

    $default  reduce using rule 5 (statement)


state 61

    6 statement: print_stmt optional_semi .

    $default  reduce using rule 6 (statement)


state 62

    7 statement: input_stmt optional_semi .

    $default  reduce using rule 7 (statement)


state 63

    8 statement: return_stmt optional_semi .

    $default  reduce using rule 8 (statement)


state 64

   27 assignment: IDENTIFIER OPERATOR_ASSIGN expr .
   45 expr: expr . OPERATOR_OR expr
   46     | expr . OPERATOR_AND expr
   47     | expr . OPERATOR_EQ expr
   48     | expr . OPERATOR_NEQ expr
   49     | expr . OPERATOR_LT expr
   50     | expr . OPERATOR_LTE expr
   51     | expr . OPERATOR_GT expr
   52     | expr . OPERATOR_GTE expr
   53     | expr . OPERATOR_PLUS expr
   54     | expr . OPERATOR_MINUS expr
   55     | expr . OPERATOR_MUL expr
   56     | expr . OPERATOR_DIV expr
   57     | expr . OPERATOR_MOD expr
   58     | expr . KEYWORD_RATIO expr
